# nvcc-llvm-ir

./: CMakeLists.txt  LICENSE  Module_.cpp  NOTES  README.md  cicc.cpp  makefile  nvcc.cpp
docker/: Dockerfile  build_docker_image.sh
docker/jammy/: Dockerfile
docker/scripts/: build.sh  build_install_llvm.sh  checkout.sh
src/: cicc.cpp  nvcc-llvm-ir.cpp  nvcc.cpp  pass1.cpp  pass2.cpp  test1.cu  test2.cu
tests/matrixMul/: makefile  matrixMul.cu
tests/radim/: README.md  makefile  test.cu
